test/expected/explain_fpcf_i_v.out
explain void f(int (*g) const)
                        ^
25: syntax error: "const": ',' expected ("const" is a keyword)
